# auth0

./: Cargo.toml
src/: error.rs  lib.rs  management.rs  models.rs
src/authentication/: signup.rs
src/authentication/get_token/: client_credentials_flow.rs
src/management/: roles.rs  users.rs
