[package]
name = "auth0"
version = "0.4.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>", "Marcus Lee <marcustutorial@hotmail.com>"]
edition = "2018"
description = "Auth0 API library"
homepage = "https://github.com/marcustut/auth0"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
mockito = { version = "0.27.0", default-features = false }
tracing-test = "0.1"
